numbers를 가변 객체로 수정
List.of()가 불변 객체를 반환해줘서 shuffle이 안됐던 거였음